--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -31,6 +31,7 @@
   position: relative;
   height: 100%;
   margin: 0;
+  padding: 0;
 }
 
 .navigation__item {
@@ -127,12 +128,13 @@
 
 @media screen and (min-width: 320px) and (max-width: 613px) {
   .navigation {
-    padding-right: 16px;
+    padding: 0 16px;
     align-self: center;
   }
 
   .navigation__list {
     display: none;
+    gap: 16px;
   }
   .navigation__mobile-button {
     display: block;
